--- a/estilo/parallax-top.css
+++ b/estilo/parallax-top.css
@@ -17,7 +17,7 @@
   left: 0;
   right: 0;
   margin: auto;
-  width: 500px;
+  width: 25%;
   height: 100px;
   color: white;
   text-align: center;
@@ -28,17 +28,13 @@
   font-size: 64px;
 }
 
-.body-principal .main-principal .parallax .titulo-parallax h1::after {
+.body-principal .main-principal .parallax .titulo-parallax .tituloP::after {
   content: '';
   width: 200px;
   height: 4px;
   background-color: white;
   display: block;
   margin: 10px auto;
-}
-
-.body-principal .main-principal .parallax .titulo-parallax h3 {
-  font-size: 42px;
 }
 
 .body-principal .main-principal .pi {
