--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -506,22 +506,41 @@
   font-family: 'Alata', sans-serif;
 }
 
-.body-principal .main-principal .parallax .titulo-parallax h1 {
-  font-size: 64px;
+.body-principal .main-principal .parallax .titulo-parallax .tituloP {
+  font-size: 4rem;
 }
 
 .body-principal .main-principal .parallax .titulo-parallax .tituloP::after {
-  content: '';
-  width: 200px;
-  height: 4px;
-  background-color: white;
-  display: block;
-  margin: 10px auto;
+  content: '|';
+  margin-left: 1px;
+  opacity: 1;
+  -webkit-animation: pisca .7s infinite;
+          animation: pisca .7s infinite;
+  font-size: 80%;
 }
 
-.body-principal .main-principal .parallax .titulo-parallax .tituloP:nth-child(-n+4) {
-  font-size: 42px;
-  color: red;
+@-webkit-keyframes pisca {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes pisca {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .body-principal .main-principal .pi {
@@ -529,7 +548,7 @@
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5)), url("../img/salvador.jpg");
 }
 
-@media (max-width: 767px) {
+@media (max-width: 425px) {
   .body-principal .main-principal .parallax {
     background-size: cover;
     background-repeat: no-repeat;
@@ -537,16 +556,25 @@
   }
   .body-principal .main-principal .parallax .titulo-parallax {
     width: unset;
+    width: 60%;
   }
-  .body-principal .main-principal .parallax .titulo-parallax h1 {
-    font-size: 40px;
+  .body-principal .main-principal .parallax .titulo-parallax .tituloP {
+    font-size: 35px;
   }
-  .body-principal .main-principal .parallax .titulo-parallax h1::after {
-    width: 100px;
-    height: 3px;
+}
+
+@media (min-width: 426px) and (max-width: 767px) {
+  .body-principal .main-principal .parallax {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: right;
   }
-  .body-principal .main-principal .parallax .titulo-parallax h3 {
-    font-size: 30px;
+  .body-principal .main-principal .parallax .titulo-parallax {
+    width: unset;
+    width: 50%;
+  }
+  .body-principal .main-principal .parallax .titulo-parallax .tituloP {
+    font-size: 35px;
   }
 }
 
