--- a/estilo/horario.scss
+++ b/estilo/horario.scss
@@ -9,6 +9,7 @@
     .table {
         background-color: #212121;
         color: white;
+        font-size: 64%;
         box-shadow: 10px 10px 10px #000000;
 
         .table-text {
