--- a/estilo/horario.css
+++ b/estilo/horario.css
@@ -8,6 +8,7 @@
 .body-principal .table {
   background-color: #212121;
   color: white;
+  font-size: 64%;
   -webkit-box-shadow: 10px 10px 10px #000000;
           box-shadow: 10px 10px 10px #000000;
 }
