--- a/estilo/separador.css
+++ b/estilo/separador.css
@@ -21,4 +21,44 @@
   margin: 0 auto;
   max-width: 70%;
 }
+
+@media (min-width: 1200px) and (max-width: 2560px) {
+  .body-principal .separador-01,
+  .body-principal .separador-02,
+  .body-principal .separador-03 {
+    max-width: 85%;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .body-principal .separador-01,
+  .body-principal .separador-02,
+  .body-principal .separador-03 {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 991px) {
+  .body-principal .separador-03 {
+    background-image: url("../img/kit-03-s.png");
+    background-repeat: no-repeat;
+    height: 65px;
+    margin: 25px auto;
+    max-width: 70%;
+  }
+  .body-principal .separador-02 {
+    background-image: url("../img/kit-02-s.png");
+    background-repeat: no-repeat;
+    height: 65px;
+    margin: 25px auto;
+    max-width: 70%;
+  }
+  .body-principal .separador-01 {
+    background-image: url("../img/kit-01-s.png");
+    background-repeat: no-repeat;
+    height: 65px;
+    margin: 0 auto;
+    max-width: 70%;
+  }
+}
 /*# sourceMappingURL=separador.css.map */
