--- a/estilo/separador.scss
+++ b/estilo/separador.scss
@@ -23,4 +23,75 @@
         margin: 0 auto;
         max-width: 70%;
     }
+
+    @media (min-width: 1200px) and (max-width: 2560px) {
+
+        .separador-01,
+        .separador-02,
+        .separador-03 {
+            max-width: 85%;
+        }
+    }
+
+    @media (min-width: 992px) and (max-width: 1199px) {
+
+        .separador-01,
+        .separador-02,
+        .separador-03 {
+            max-width: 100%;
+        }
+    }
+
+    @media (min-width: 768px) and (max-width: 991px){
+        .separador-03 {
+            background-image: url('../img/kit-03-s.png');
+            background-repeat: no-repeat;
+            height: 65px;
+            margin: 25px auto;
+            max-width: 70%;
+        }
+    
+        .separador-02 {
+            background-image: url('../img/kit-02-s.png');
+            background-repeat: no-repeat;
+            height: 65px;
+            margin: 25px auto;
+            max-width: 70%;
+        }
+    
+        .separador-01 {
+            background-image: url('../img/kit-01-s.png');
+            background-repeat: no-repeat;
+            height: 65px;
+            margin: 0 auto;
+            max-width: 70%;
+        }
+    }
+
+ /*    @media(max-width: 767px){
+        .separador-03 {
+            background-image: url('../img/kit-03-s.png');
+            background-repeat: no-repeat;
+            height: 65px;
+            margin: 25px auto;
+            max-width: 70%;
+        }
+    
+        .separador-02 {
+            background-image: url('../img/kit-02-s.png');
+            background-repeat: no-repeat;
+            height: 65px;
+            margin: 25px auto;
+            max-width: 70%;
+        }
+    
+        .separador-01 {
+            background-image: url('../img/kit-01-s.png');
+            background-repeat: no-repeat;
+            height: 65px;
+            margin: 0 auto;
+            max-width: 70%;
+        }
+    } */
+
 }
