--- a/estilo/separador.css
+++ b/estilo/separador.css
@@ -38,27 +38,57 @@
   }
 }
 
-@media (max-width: 991px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .body-principal .separador-03 {
     background-image: url("../img/kit-03-s.png");
     background-repeat: no-repeat;
     height: 65px;
     margin: 25px auto;
-    max-width: 70%;
+    max-width: 65%;
   }
   .body-principal .separador-02 {
     background-image: url("../img/kit-02-s.png");
     background-repeat: no-repeat;
     height: 65px;
     margin: 25px auto;
-    max-width: 70%;
+    max-width: 65%;
   }
   .body-principal .separador-01 {
     background-image: url("../img/kit-01-s.png");
     background-repeat: no-repeat;
     height: 65px;
     margin: 0 auto;
-    max-width: 70%;
+    max-width: 65%;
+  }
+}
+
+@media (max-width: 320px) {
+  .body-principal .separador-03 {
+    background-image: url("../img/kit-03-sm.png");
+    max-width: 90%;
+  }
+  .body-principal .separador-02 {
+    background-image: url("../img/kit-02-sm.png");
+    max-width: 90%;
+  }
+  .body-principal .separador-01 {
+    background-image: url("../img/kit-01-sm.png");
+    max-width: 90%;
+  }
+}
+
+@media (max-width: 320px) {
+  .body-principal .separador-03 {
+    background-image: url("../img/kit-03-sm.png");
+    max-width: 65;
+  }
+  .body-principal .separador-02 {
+    background-image: url("../img/kit-02-sm.png");
+    max-width: 65;
+  }
+  .body-principal .separador-01 {
+    background-image: url("../img/kit-01-sm.png");
+    max-width: 65;
   }
 }
 /*# sourceMappingURL=separador.css.map */
