--- a/estilo/separador.scss
+++ b/estilo/separador.scss
@@ -48,7 +48,7 @@
             background-repeat: no-repeat;
             height: 65px;
             margin: 25px auto;
-            max-width: 70%;
+            max-width: 65%;
         }
     
         .separador-02 {
@@ -56,7 +56,7 @@
             background-repeat: no-repeat;
             height: 65px;
             margin: 25px auto;
-            max-width: 70%;
+            max-width: 65%;
         }
     
         .separador-01 {
@@ -64,34 +64,41 @@
             background-repeat: no-repeat;
             height: 65px;
             margin: 0 auto;
-            max-width: 70%;
+            max-width: 65%;
         }
     }
 
- /*    @media(max-width: 767px){
+    @media(max-width: 320px){
         .separador-03 {
-            background-image: url('../img/kit-03-s.png');
-            background-repeat: no-repeat;
-            height: 65px;
-            margin: 25px auto;
-            max-width: 70%;
+            background-image: url('../img/kit-03-sm.png');
+            max-width: 90%;
         }
     
         .separador-02 {
-            background-image: url('../img/kit-02-s.png');
-            background-repeat: no-repeat;
-            height: 65px;
-            margin: 25px auto;
-            max-width: 70%;
+            background-image: url('../img/kit-02-sm.png');
+            max-width: 90%;
         }
     
         .separador-01 {
-            background-image: url('../img/kit-01-s.png');
-            background-repeat: no-repeat;
-            height: 65px;
-            margin: 0 auto;
-            max-width: 70%;
+            background-image: url('../img/kit-01-sm.png');
+            max-width: 90%;
         }
-    } */
+    } 
 
+    @media(max-width: 425px){
+        .separador-03 {
+            background-image: url('../img/kit-03-sm.png');
+            max-width: 65;
+        }
+    
+        .separador-02 {
+            background-image: url('../img/kit-02-sm.png');
+            max-width: 65;
+        }
+    
+        .separador-01 {
+            background-image: url('../img/kit-01-sm.png');
+            max-width: 65;
+        }
+    }
 }
