--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -664,7 +664,7 @@
   }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 320px) {
   .body-principal .separador-03 {
     background-image: url("../img/kit-03-sm.png");
     max-width: 90%;
@@ -676,6 +676,21 @@
   .body-principal .separador-01 {
     background-image: url("../img/kit-01-sm.png");
     max-width: 90%;
+  }
+}
+
+@media (max-width: 425px) {
+  .body-principal .separador-03 {
+    background-image: url("../img/kit-03-sm.png");
+    max-width: 65;
+  }
+  .body-principal .separador-02 {
+    background-image: url("../img/kit-02-sm.png");
+    max-width: 65;
+  }
+  .body-principal .separador-01 {
+    background-image: url("../img/kit-01-sm.png");
+    max-width: 65;
   }
 }
 
