--- a/estilo/separador.css
+++ b/estilo/separador.css
@@ -62,6 +62,21 @@
   }
 }
 
+@media (min-width: 426px) and (max-width: 767px) {
+  .body-principal .separador-03 {
+    background-image: url("../img/kit-03-s.png");
+    max-width: 65%;
+  }
+  .body-principal .separador-02 {
+    background-image: url("../img/kit-02-s.png");
+    max-width: 65%;
+  }
+  .body-principal .separador-01 {
+    background-image: url("../img/kit-01-s.png");
+    max-width: 65%;
+  }
+}
+
 @media (max-width: 320px) {
   .body-principal .separador-03 {
     background-image: url("../img/kit-03-sm.png");
@@ -77,7 +92,7 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 425px) {
   .body-principal .separador-03 {
     background-image: url("../img/kit-03-sm.png");
     max-width: 65;
