--- a/estilo/separador.css
+++ b/estilo/separador.css
@@ -1,5 +1,5 @@
 .body-principal .separador-03 {
-  background-image: url("../img/kit-03.png");
+  background-image: url("../img/separador/kit-03.png");
   background-repeat: no-repeat;
   height: 65px;
   margin: 25px auto;
@@ -7,7 +7,7 @@
 }
 
 .body-principal .separador-02 {
-  background-image: url("../img/kit-02.png");
+  background-image: url("../img/separador/kit-02.png");
   background-repeat: no-repeat;
   height: 65px;
   margin: 25px auto;
@@ -15,7 +15,7 @@
 }
 
 .body-principal .separador-01 {
-  background-image: url("../img/kit-01.png");
+  background-image: url("../img/separador/kit-01.png");
   background-repeat: no-repeat;
   height: 65px;
   margin: 0 auto;
@@ -40,21 +40,21 @@
 
 @media (min-width: 768px) and (max-width: 991px) {
   .body-principal .separador-03 {
-    background-image: url("../img/kit-03-s.png");
+    background-image: url("../img/separador/kit-03-s.png");
     background-repeat: no-repeat;
     height: 65px;
     margin: 25px auto;
     max-width: 65%;
   }
   .body-principal .separador-02 {
-    background-image: url("../img/kit-02-s.png");
+    background-image: url("../img/separador/kit-02-s.png");
     background-repeat: no-repeat;
     height: 65px;
     margin: 25px auto;
     max-width: 65%;
   }
   .body-principal .separador-01 {
-    background-image: url("../img/kit-01-s.png");
+    background-image: url("../img/separador/kit-01-s.png");
     background-repeat: no-repeat;
     height: 65px;
     margin: 0 auto;
@@ -64,45 +64,45 @@
 
 @media (min-width: 426px) and (max-width: 767px) {
   .body-principal .separador-03 {
-    background-image: url("../img/kit-03-sm.png");
+    background-image: url("../img/separador/kit-03-sm.png");
     max-width: 65%;
   }
   .body-principal .separador-02 {
-    background-image: url("../img/kit-02-sm.png");
+    background-image: url("../img/separador/kit-02-sm.png");
     max-width: 65%;
   }
   .body-principal .separador-01 {
-    background-image: url("../img/kit-01-sm.png");
+    background-image: url("../img/separador/kit-01-sm.png");
     max-width: 65%;
   }
 }
 
 @media (max-width: 425px) {
   .body-principal .separador-03 {
-    background-image: url("../img/kit-03-sm.png");
+    background-image: url("../img/separador/kit-03-sm.png");
     max-width: 65;
   }
   .body-principal .separador-02 {
-    background-image: url("../img/kit-02-sm.png");
+    background-image: url("../img/separador/kit-02-sm.png");
     max-width: 65;
   }
   .body-principal .separador-01 {
-    background-image: url("../img/kit-01-sm.png");
+    background-image: url("../img/separador/kit-01-sm.png");
     max-width: 65;
   }
 }
 
 @media (max-width: 320px) {
   .body-principal .separador-03 {
-    background-image: url("../img/kit-03-sm.png");
+    background-image: url("../img/separador/kit-03-sm.png");
     max-width: 90%;
   }
   .body-principal .separador-02 {
-    background-image: url("../img/kit-02-sm.png");
+    background-image: url("../img/separador/kit-02-sm.png");
     max-width: 90%;
   }
   .body-principal .separador-01 {
-    background-image: url("../img/kit-01-sm.png");
+    background-image: url("../img/separador/kit-01-sm.png");
     max-width: 90%;
   }
 }
