--- a/estilo/horario.css
+++ b/estilo/horario.css
@@ -8,7 +8,7 @@
 .body-principal .table {
   background-color: #212121;
   color: white;
-  font-size: 64%;
+  font-size: 100%;
   -webkit-box-shadow: 10px 10px 10px #000000;
           box-shadow: 10px 10px 10px #000000;
 }
@@ -23,5 +23,18 @@
 
 .body-principal .table-green:hover {
   background-color: #2b9348;
+}
+
+.body-principal .table-titulo {
+  text-align: center;
+  font-family: 'Alata', sans-serif;
+  font-weight: 600;
+  margin: 0 0 30px;
+}
+
+@media (max-width: 425px) {
+  .body-principal .table {
+    font-size: 64%;
+  }
 }
 /*# sourceMappingURL=horario.css.map */
