--- a/estilo/estilo.scss
+++ b/estilo/estilo.scss
@@ -5,6 +5,9 @@
 @import "./horario.scss";
 @import "./separador.scss";
 @import "./slick.scss";
-@import "./carousel.scss";
 
 
+
+.body-principal {
+
+}
