--- a/estilo/slick.scss
+++ b/estilo/slick.scss
@@ -1,4 +1,23 @@
 .body-principal {
+    #servicos {
+        padding-top: 1px;
+        margin-bottom: 80px;
+
+        .titulo-slick {
+            text-align: center;
+            font-family: 'Alata', sans-serif;
+            font-weight: 600;
+            margin: 15px 0px;
+        }
+
+        .slick-principal {
+            .titulo-slick01 {
+                max-width: 180px;
+                text-align: center;
+            }
+        }
+    }
+
     .main-principal {
         .carousel {
             .slick-arrow {
