--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -773,6 +773,7 @@
 
 .body-principal .duvida-pri .duvida-seg {
   background-image: url("../img/barbearia.png");
+  background-repeat: no-repeat;
   background-color: #212121;
 }
 
