--- a/estilo/estilo.scss
+++ b/estilo/estilo.scss
@@ -16,7 +16,7 @@
        
         .duvida-seg{
             background-image: url('../img/barbearia.png');
-            
+            background-repeat: no-repeat;
             background-color: #212121;
             
             h1{
