--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -771,6 +771,12 @@
   margin: 65px auto 0;
 }
 
+.body-principal .duvida-pri .titulo-duvida {
+  text-align: center;
+  font-family: 'Alata', sans-serif;
+  font-weight: 600;
+}
+
 .body-principal .duvida-pri .duvida-seg {
   background-image: url("../img/barbearia.png");
   background-repeat: no-repeat;
