--- a/estilo/estilo.scss
+++ b/estilo/estilo.scss
@@ -9,22 +9,26 @@
 
 
 .body-principal {
-    .duvida-pri{
+    .duvida-pri {
         max-width: 1093px;
-        
         margin: 65px auto 0;
-       
-        .duvida-seg{
+
+        .titulo-duvida {
+            text-align: center;
+            font-family: 'Alata', sans-serif;
+            font-weight: 600;
+        }
+
+        .duvida-seg {
             background-image: url('../img/barbearia.png');
             background-repeat: no-repeat;
             background-color: #212121;
-            
-            h1{
+
+            h1 {
                 color: #fff;
             }
-            .teste99{
-                
-            }
+
+            .teste99 {}
         }
     }
 }
