--- a/estilo/separador.css
+++ b/estilo/separador.css
@@ -2,7 +2,7 @@
   background-image: url("../img/separador/kit-03.png");
   background-repeat: no-repeat;
   height: 65px;
-  margin: 25px auto;
+  margin: 25px auto 0px;
   max-width: 70%;
 }
 
