--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -184,6 +184,13 @@
   .body-principal .header-principal .nav-principal .menu-principal .navbar-nav .nav-item {
     background-color: transparent;
   }
+  .body-principal .header-principal .nav-principal .menu-principal .navbar-nav > a::after {
+    display: none;
+  }
+  .body-principal .header-principal .nav-principal .menu-principal .navbar-nav a:hover::after,
+  .body-principal .header-principal .nav-principal .menu-principal .navbar-nav a.active::after {
+    width: 0;
+  }
 }
 
 .body-principal {
@@ -627,7 +634,7 @@
   background-image: url("../img/separador/kit-03.png");
   background-repeat: no-repeat;
   height: 65px;
-  margin: 25px auto;
+  margin: 25px auto 0px;
   max-width: 70%;
 }
 
@@ -734,7 +741,7 @@
 
 .body-principal #servicos {
   padding-top: 1px;
-  margin-bottom: 80px;
+  margin-bottom: 35px;
 }
 
 .body-principal #servicos .titulo-slick {
@@ -769,21 +776,57 @@
 .body-principal .duvida-pri {
   max-width: 1093px;
   margin: 65px auto 0;
+  font-family: 'Alata', sans-serif;
 }
 
 .body-principal .duvida-pri .titulo-duvida {
   text-align: center;
-  font-family: 'Alata', sans-serif;
   font-weight: 600;
+  margin: 20px auto 40px;
 }
 
 .body-principal .duvida-pri .duvida-seg {
-  background-image: url("../img/barbearia.png");
+  background-image: url("../img/barbearia-o.png");
   background-repeat: no-repeat;
   background-color: #212121;
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+          box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
-.body-principal .duvida-pri .duvida-seg h1 {
+.body-principal .duvida-pri .duvida-seg .texto-duvida {
   color: #fff;
+  text-align: center;
+  padding: 57px 26px;
+}
+
+.body-principal .duvida-pri .duvida-seg .img-duvida {
+  max-width: 100% !important;
+}
+
+@media (max-width: 425px) {
+  .body-principal .duvida-pri .titulo-duvida {
+    margin: -35px auto 40px;
+  }
+  .body-principal .duvida-pri .duvida-seg .texto-duvida {
+    font-size: 20px;
+    padding: 30px 20px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .body-principal .duvida-pri .titulo-duvida {
+    margin: -25px auto 40px;
+  }
+  .body-principal .duvida-pri .duvida-seg .texto-duvida {
+    color: #fff;
+    text-align: center;
+    padding: 57px 26px;
+  }
+  .body-principal .duvida-pri .duvida-seg .img-duvida {
+    max-width: 130% !important;
+    position: absolute;
+    left: -90px;
+    top: 35px;
+  }
 }
 /*# sourceMappingURL=estilo.css.map */
