--- a/estilo/estilo.scss
+++ b/estilo/estilo.scss
@@ -5,30 +5,4 @@
 @import "./horario.scss";
 @import "./separador.scss";
 @import "./slick.scss";
-
-
-
-.body-principal {
-    .duvida-pri {
-        max-width: 1093px;
-        margin: 65px auto 0;
-
-        .titulo-duvida {
-            text-align: center;
-            font-family: 'Alata', sans-serif;
-            font-weight: 600;
-        }
-
-        .duvida-seg {
-            background-image: url('../img/barbearia.png');
-            background-repeat: no-repeat;
-            background-color: #212121;
-
-            h1 {
-                color: #fff;
-            }
-
-            .teste99 {}
-        }
-    }
-}
+@import "./duvida.scss";
