--- a/estilo/separador.scss
+++ b/estilo/separador.scss
@@ -4,7 +4,7 @@
         background-image: url('../img/separador/kit-03.png');
         background-repeat: no-repeat;
         height: 65px;
-        margin: 25px auto;
+        margin: 25px auto 0px;
         max-width: 70%;
     }
 
