--- a/estilo/duvida.css
+++ b/estilo/duvida.css
@@ -18,7 +18,11 @@
           box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
-.body-principal .duvida-pri .duvida-seg .texto-duvida {
+.body-principal .duvida-pri .duvida-seg .seg-duvida {
+  margin: auto 0;
+}
+
+.body-principal .duvida-pri .duvida-seg .seg-duvida .texto-duvida {
   color: #fff;
   text-align: center;
   padding: 57px 26px;
@@ -26,6 +30,7 @@
 
 .body-principal .duvida-pri .duvida-seg .img-duvida {
   max-width: 100% !important;
+  margin-top: 30px;
 }
 
 @media (max-width: 425px) {
@@ -34,7 +39,7 @@
   }
   .body-principal .duvida-pri .duvida-seg .texto-duvida {
     font-size: 20px;
-    padding: 30px 20px;
+    padding: 20px 20px 0 !important;
   }
 }
 
@@ -42,16 +47,20 @@
   .body-principal .duvida-pri .titulo-duvida {
     margin: -25px auto 40px;
   }
+  .body-principal .duvida-pri .duvida-seg {
+    position: relative;
+  }
   .body-principal .duvida-pri .duvida-seg .texto-duvida {
     color: #fff;
     text-align: center;
     padding: 57px 26px;
   }
   .body-principal .duvida-pri .duvida-seg .img-duvida {
-    max-width: 130% !important;
+    margin-top: 0;
+    max-width: 100% !important;
     position: absolute;
-    left: -90px;
-    top: 35px;
+    left: -20px;
+    top: 60px;
   }
 }
 /*# sourceMappingURL=duvida.css.map */
