--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -838,4 +838,20 @@
     top: 60px;
   }
 }
+
+.body-principal {
+  background-color: red !important;
+}
+
+.body-principal .main-principal .msgConfir {
+  background-color: #212121;
+  position: absolute;
+  left: 16%;
+  top: 330%;
+  color: white;
+  font-weight: 700;
+  font-size: 20px !important;
+  padding: 25px;
+  border-radius: 50px;
+}
 /*# sourceMappingURL=estilo.css.map */
