--- a/estilo/style.scss
+++ b/estilo/style.scss
@@ -22,5 +22,10 @@
       padding: 25px;
       border-radius: 50px;
     }
+
+    .loading{
+      display: inline-block;
+      margin-left: 20px;
+    }
   }
 }
